<resources>
    <string name="app_name">Se7a</string>
    <string name="username">User Name :</string>
    <string name="password">Password :</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="CreateAccount">"Create an Account "</string>
    <string name="FirstName">First Name :</string>
    <string name="LastName">Last Name</string>
    <string name="SignUp">Sign Up</string>
    <string name="Email">Yout E-mail</string>
    <string name="phone">Your Phone</string>
    <string name="or">          OR          </string>
    <string name="start">Start</string>
</resources>